[gd_scene load_steps=9 format=3 uid="uid://bii7nype42mox"]

[ext_resource type="Script" uid="uid://b13d6i4qux1p5" path="res://Escenas/win_screen.gd" id="1_gwa1a"]
[ext_resource type="Shader" uid="uid://cnaql23erjyjd" path="res://Escenas/menu.gdshader" id="1_reh84"]
[ext_resource type="Texture2D" uid="uid://d1mjpf7wxpm2d" path="res://assets/ice_cream_background.png" id="2_gwa1a"]
[ext_resource type="Theme" uid="uid://chvhkfck1givs" path="res://ui/menu_theme.tres" id="3_xtfbb"]
[ext_resource type="FontFile" uid="uid://bkecrwanthtwl" path="res://fonts/BadIceCreamFont.otf" id="4_ehy4v"]
[ext_resource type="AudioStream" uid="uid://db805ey625j35" path="res://sounds/bic_win_music.wav" id="6_xtfbb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3l26a"]
shader = ExtResource("1_reh84")
shader_parameter/border_color = Color(0.682353, 0.572549, 0, 1)
shader_parameter/corner_radius = 0.04
shader_parameter/border_thickness = 0.02

[sub_resource type="LabelSettings" id="LabelSettings_qnisd"]
font_size = 42
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[node name="WinScreen" type="CanvasLayer"]
script = ExtResource("1_gwa1a")

[node name="IceCreamBackground" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_3l26a")
position = Vector2(576, 316)
scale = Vector2(0.234375, 0.309677)
texture = ExtResource("2_gwa1a")
region_rect = Rect2(1.81531, 0.251709, 1918.18, 619.748)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_xtfbb")

[node name="Label" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ehy4v")
text = "Victoria!!"
label_settings = SubResource("LabelSettings_qnisd")
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continuar
"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Salir"
flat = true

[node name="win_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xtfbb")
volume_db = -8.889

[connection signal="pressed" from="VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
